force-app/main/default/objects/Hearing__c/Hearing__c.object-meta.xml
<CustomObject>
    <description>This stores all of the hearings/conferences related to an Appeal, which gets information from the Assessment, Liability Appeal, Case, and Account from a relationship level.</description>
    <label>Meeting</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Meeting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>