force-app/main/default/objects/Hearing__c/fields/Appeal__c.field-meta.xml
<CustomField>
    <fullName>Appeal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Appeal this Hearing is related to.</description>
    <inlineHelpText>This is the Appeal this Hearing is related to.</inlineHelpText>
    <label>Appeal</label>
    <referenceTo>Appeal__c</referenceTo>
    <relationshipName>Hearings</relationshipName>
    <type>Lookup</type>
</CustomField>