force-app/main/default/objects/Hearing__c/fields/Assigned_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Investigator</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Meetings (Assigned Investigator)</relationshipLabel>
    <relationshipName>Assigned_Investigator</relationshipName>
    <type>Lookup</type>
</CustomField>