force-app/main/default/objects/Hearing__c/fields/BOFE_Date_Lifted__c.field-meta.xml
<CustomField>
    <fullName>BOFE_Date_Lifted__c</fullName>
    <label>BOFE Date Lifted</label>
    <type>Date</type>
</CustomField>