force-app/main/default/objects/Hearing__c/fields/Case_Employer__c.field-meta.xml
<CustomField>
    <fullName>Case_Employer__c</fullName>
    <formula>Case__r.Employer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Employer</label>
    <type>Text</type>
</CustomField>