force-app/main/default/objects/Hearing__c/fields/Count_of_Appeared_participants__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Appeared_participants__c</fullName>
    <inlineHelpText>Counts all meeting participants that appeared</inlineHelpText>
    <label>Count of Appeared participants</label>
    <summaryFilterItems>
        <field>Meeting_Participant__c.Attendance__c</field>
        <operation>equals</operation>
        <value>Appeared</value>
    </summaryFilterItems>
    <summaryForeignKey>Meeting_Participant__c.Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>