force-app/main/default/objects/Hearing__c/fields/Count_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Participants__c</fullName>
    <description>Rollup count of participants for the meeting</description>
    <label>Count of Participants</label>
    <summaryForeignKey>Meeting_Participant__c.Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>