force-app/main/default/objects/Hearing__c/fields/Court_House_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_House_Name__c</fullName>
    <description>Court House Name used for Reporting</description>
    <formula>Courthouse__r.Name</formula>
    <label>Court House Name</label>
    <type>Text</type>
</CustomField>