force-app/main/default/objects/Hearing__c/fields/Courthouse__c.field-meta.xml
<CustomField>
    <fullName>Courthouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to allow users to relate a meeting record to an Office location as well as a Courthouse location.  Courthouse locations are merged into some Conga output documents (i.e. ODA)</description>
    <inlineHelpText>Please select a courthouse where the meeting is set to take place (if applicable).</inlineHelpText>
    <label>Courthouse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Courthouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Meetings (Courthouse)</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>