force-app/main/default/objects/Hearing__c/fields/Date_IC_alleged_at_hearing__c.field-meta.xml
<CustomField>
    <fullName>Date_IC_alleged_at_hearing__c</fullName>
    <label>Date IC alleged at hearing</label>
    <type>Date</type>
</CustomField>