force-app/main/default/objects/Hearing__c/fields/Days_Appeal_Req_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_Appeal_Req_Meeting__c</fullName>
    <description>Days from Appeal Request Received date to the Meeting Date.</description>
    <formula>Appeal__r.Request_Receipt_Date__c -  DV_Start_Date__c</formula>
    <label>Days Appeal Req - Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>