force-app/main/default/objects/Hearing__c/fields/Dismissed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_Reason__c</fullName>
    <label>Dismissed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Plaintiff failed to appear</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Stipulated Settlement</fullName>
            </value>
            <value>
                <fullName>Full payment by Defendant</fullName>
            </value>
            <value>
                <fullName>Claimant Did not appear</fullName>
            </value>
            <value>
                <fullName>No Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>