force-app/main/default/objects/Hearing__c/fields/DV_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DV_End_Date__c</fullName>
    <description>DV formula field test for Conga. Please do not touch</description>
    <formula>DATEVALUE( Meeting_End_Date_Time__c )</formula>
    <label>DV End Date</label>
    <type>Date</type>
</CustomField>