force-app/main/default/objects/Hearing__c/fields/DV_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DV_Start_Date__c</fullName>
    <description>DV formula field test for Conga. Please do not touch</description>
    <formula>DATEVALUE(Meeting_Start_Date_Time__c)</formula>
    <label>DV Start Date</label>
    <type>Date</type>
</CustomField>