force-app/main/default/objects/Hearing__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>When the Hearing Result is entered, the Hearing Officer needs to have an effective date to set. The Hearing Officer can take some time before entering a decision, and the effective date is not necessarily the same as the Hearing Date.</description>
    <inlineHelpText>Date on which the hearing results become effective. May be different from the hearing date or the date the results are entered.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>