force-app/main/default/objects/Hearing__c/fields/Fast_Track__c.field-meta.xml
<CustomField>
    <fullName>Fast_Track__c</fullName>
    <label>Fast Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>