force-app/main/default/objects/Hearing__c/fields/Findings_Sub_to_LC__c.field-meta.xml
<CustomField>
    <fullName>Findings_Sub_to_LC__c</fullName>
    <label>Findings Sub to LC</label>
    <type>Date</type>
</CustomField>