force-app/main/default/objects/Hearing__c/fields/H_S_Case_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>H_S_Case_Receive_Date__c</fullName>
    <label>H&amp;S Case Receive Date</label>
    <type>Date</type>
</CustomField>