force-app/main/default/objects/Hearing__c/fields/Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Date__c</fullName>
    <label>Legacy Meeting Date</label>
    <type>DateTime</type>
</CustomField>