force-app/main/default/objects/Hearing__c/fields/Hearing_Form_Returned__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Form_Returned__c</fullName>
    <label>WCA 16A Returned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>