force-app/main/default/objects/Hearing__c/fields/Hearing_Form_Returned_Status__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Form_Returned_Status__c</fullName>
    <label>WCA 16A Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hearing_Form_Returned__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Returned, Refer anyway</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>