force-app/main/default/objects/Hearing__c/fields/Hearing_Held_Date__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Held_Date__c</fullName>
    <label>Hearing Held Date</label>
    <type>Date</type>
</CustomField>