force-app/main/default/objects/Hearing__c/fields/Hearing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Notes__c</fullName>
    <label>Hearing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>