force-app/main/default/objects/Hearing__c/fields/Hearing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the Employee Record of the Hearing Officer for this Hearing.</description>
    <inlineHelpText>A link to the Employee Record of the Hearing Officer for this Hearing.</inlineHelpText>
    <label>Hearing Officer Old</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Hearing_Officer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Hearings</relationshipName>
    <type>Lookup</type>
</CustomField>