force-app/main/default/objects/Hearing__c/fields/Hearing_Officer_Employee__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Officer_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The internal employee that will serve as the hearing officer/ deputy or senior deputy</description>
    <label>Meeting Held By</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only employees with the hearing officer position can be selected.</errorMessage>
        <filterItems>
            <field>DIR_Employee__c.Position__c</field>
            <operation>equals</operation>
            <value>Senior Deputy, Deputy, Hearing Officer, Legal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Hearings</relationshipLabel>
    <relationshipName>Hearings</relationshipName>
    <type>Lookup</type>
</CustomField>