force-app/main/default/objects/Hearing__c/fields/IC_Determination__c.field-meta.xml
<CustomField>
    <fullName>IC_Determination__c</fullName>
    <inlineHelpText>If Independent Contractor status is claimed, indicate the outcome of the determination here.</inlineHelpText>
    <label>IC Determination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IC Established</fullName>
            </value>
            <value>
                <fullName>Employee Status Established</fullName>
            </value>
            <value>
                <fullName>Settled - No IC Determination Made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>