force-app/main/default/objects/Hearing__c/fields/In_Person_Remote_Meeting__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Remote_Meeting__c</fullName>
    <label>In Person/Remote Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Phone/Remote</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>