force-app/main/default/objects/Hearing__c/fields/Joint_Liability_Basis__c.field-meta.xml
<CustomField>
    <fullName>Joint_Liability_Basis__c</fullName>
    <formula>TEXT(Case__r.Joint_liability_basis__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint Liability Basis</label>
    <type>Text</type>
</CustomField>