force-app/main/default/objects/Hearing__c/fields/Just_and_Equitable_Postponement_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Just_and_Equitable_Postponement_Reasons__c</fullName>
    <label>Just and Equitable Postponement Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inability to determine legal entity</fullName>
            </value>
            <value>
                <fullName>Delay in the return of the Complaint</fullName>
            </value>
            <value>
                <fullName>Delay due to Plaintiff perfecting complaint</fullName>
            </value>
            <value>
                <fullName>Lengthy Audit needed</fullName>
            </value>
            <value>
                <fullName>Correction(s) to Complaint needed</fullName>
            </value>
            <value>
                <fullName>Plaintiff amended complaint</fullName>
            </value>
            <value>
                <fullName>Incomplete evidence/exhibits</fullName>
            </value>
            <value>
                <fullName>Defendant’s delayed response</fullName>
            </value>
            <value>
                <fullName>Defendant failure to respond</fullName>
            </value>
            <value>
                <fullName>Parties attempted settlement</fullName>
            </value>
            <value>
                <fullName>Unreported address change</fullName>
            </value>
            <value>
                <fullName>Legal referral response time</fullName>
            </value>
            <value>
                <fullName>Continuance request</fullName>
            </value>
            <value>
                <fullName>Incorrect party named</fullName>
            </value>
            <value>
                <fullName>Illness of one of the parties</fullName>
            </value>
            <value>
                <fullName>Out of state employer</fullName>
            </value>
            <value>
                <fullName>Out of state Plaintiff</fullName>
            </value>
            <value>
                <fullName>Plaintiff out of the country</fullName>
            </value>
            <value>
                <fullName>Defendant out of the country</fullName>
            </value>
            <value>
                <fullName>Related litigation</fullName>
            </value>
            <value>
                <fullName>Delay for resolution of secondary civil case</fullName>
            </value>
            <value>
                <fullName>Potential bankruptcy filing</fullName>
            </value>
            <value>
                <fullName>Unable to obtain service</fullName>
            </value>
            <value>
                <fullName>Translation of documents needed</fullName>
            </value>
            <value>
                <fullName>Criminal charges pending</fullName>
            </value>
            <value>
                <fullName>Commissions not due at the time the claim was filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>