force-app/main/default/objects/Hearing__c/fields/Late__c.field-meta.xml
<CustomField>
    <fullName>Late__c</fullName>
    <description>Formula to examine the Status of a Meeting record; if Status = &quot;Postponed&quot;, the checkbox remains unchecked, otherwise should the Number of Days to Hearing be &gt; 120 it will be checked.</description>
    <formula>IF( AND( NOT( ISPICKVAL( Status__c , &quot;Postponed&quot; ) ) , (  ( Number_of_Days_to_Hearing__c ) &gt; 120 ) ) , true , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late</label>
    <type>Checkbox</type>
</CustomField>