force-app/main/default/objects/Hearing__c/fields/Length_of_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Hearing__c</fullName>
    <inlineHelpText>Length of Meeting in minutes</inlineHelpText>
    <label>Length of Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>