force-app/main/default/objects/Hearing__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <label>Mailing State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>