force-app/main/default/objects/Hearing__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>Mailing Street</label>
    <type>TextArea</type>
</CustomField>