force-app/main/default/objects/Hearing__c/fields/Meeting_Count__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>