force-app/main/default/objects/Hearing__c/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <label>Meeting Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telephone/remote</fullName>
            </value>
            <value>
                <fullName>Employer’s workplace</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bakersfield - 01</fullName>
            </value>
            <value>
                <fullName>Fresno – 04</fullName>
            </value>
            <value>
                <fullName>Long Beach – 05</fullName>
            </value>
            <value>
                <fullName>Los Angeles – 06</fullName>
            </value>
            <value>
                <fullName>Oakland – 07</fullName>
            </value>
            <value>
                <fullName>Redding – 15</fullName>
            </value>
            <value>
                <fullName>Riverside</fullName>
            </value>
            <value>
                <fullName>Sacramento – 08</fullName>
            </value>
            <value>
                <fullName>Salinas – 22</fullName>
            </value>
            <value>
                <fullName>San Bernardino – 09</fullName>
            </value>
            <value>
                <fullName>San Diego – 10</fullName>
            </value>
            <value>
                <fullName>San Francisco – 11</fullName>
            </value>
            <value>
                <fullName>San Jose – 12</fullName>
            </value>
            <value>
                <fullName>Santa Ana – 18</fullName>
            </value>
            <value>
                <fullName>Santa Barbara - 13</fullName>
            </value>
            <value>
                <fullName>Santa Rosa – 23</fullName>
            </value>
            <value>
                <fullName>Stockton – 14</fullName>
            </value>
            <value>
                <fullName>Van Nuys - 17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>