force-app/main/default/objects/Hearing__c/fields/Meeting_Location_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location_Case_Safe_ID__c</fullName>
    <description>renders 18 character ID for use in comparing for conga reports</description>
    <formula>CASESAFEID( WCA_Office__c )</formula>
    <label>Meeting Location Case Safe ID</label>
    <type>Text</type>
</CustomField>