force-app/main/default/objects/Hearing__c/fields/Meeting_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location_Name__c</fullName>
    <description>Meeting Location Name used for Reporting.</description>
    <formula>WCA_Office__r.Name</formula>
    <label>Meeting Location Name</label>
    <type>Text</type>
</CustomField>